applications/omada/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: omada-controller
  labels:
    app.kubernetes.io/name: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: omada-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: omada-controller
    spec:
      containers:
        - name: omada-controller
          image: mbentley/omada-controller:5.13
          imagePullPolicy: Always
          ports:
            - name: manage-http
              containerPort: 8088
              protocol: TCP
            - name: manage-https
              containerPort: 8043
              protocol: TCP
            - name: portal-https
              containerPort: 8843
            - name: app-discovery
              containerPort: 27001
              protocol: UDP
            - name: discovery
              containerPort: 29810
              protocol: UDP
            - name: manager-v1
              containerPort: 29811
              protocol: TCP
            - name: adopt-v1
              containerPort: 29812
              protocol: TCP
            - name: upgrade-v1
              containerPort: 29813
              protocol: TCP
            - name: manager-v2
              containerPort: 29814
              protocol: TCP
            - name: transfer-v2
              containerPort: 29815
              protocol: TCP
            - name: rtty
              containerPort: 29816
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: omada-controller-data
              mountPath: /opt/tplink/EAPController/data
              readOnly: false
      volumes:
        - name: omada-controller-data
          persistentVolumeClaim:
            claimName: omada-controller-config
