applications/omada/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - omada.internal.zem.org.uk
      secretName: ingress-omada-tls
  ingressClassName: nginx-internal
  rules:
    - host: "omada.internal.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  number: 8080
